# Sun-Valley-ttk-crimson

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: generate_spritesheet.yml  test.yml
src/: package.json  pnpm-lock.yaml  spritesheet_generator.js
svc_ttk/: __init__.py  example.py  svc.tcl
svc_ttk/theme/: dark.tcl  light.tcl  sprites_dark.tcl
tests/: test_sv_ttk.py
